created timeblock function. save button functionality, local storage working and populating previously saved data in correct input fields. stable version

--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
     </header>
     <div id="planner" class="planner"></div>
 
+    <!-- timeblocks willl be dynamically added here by the javascript -->
 
 
 
 
 
-    <!-- scripts -->
+
+    <!-- scripts loadig-->
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"> </script>
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="./assets/script.js"></script>
