added responsiveness for smaller screen sizes. added X button for quick clearing input fields. Reworked CSS styling to look more modern. added to README

--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
         <h2>A simple calendar app for scheduling your work day</h2>
         <div id="currentDay" class="current-day"></div>
     </header>
-    <div id="planner" class="planner"></div>
+    <div class="scheduler-container">
+        <div id="planner" class="planner"></div>
 
-    <!-- timeblocks willl be dynamically added here by the javascript -->
+        <!-- timeblocks willl be dynamically added here by the javascript -->
 
-
+    </div>
 
 
 
